# Agent-Trust

./: .gitignore  README.md  agent-trust-carousel.html  final_test.txt  pyproject.toml  requirements.txt  test_output.txt
agent_trust/: __init__.py  config.py  exceptions.py  types.py
agent_trust/agent_id/: __init__.py  identity.py  keys.py  resolver.py
agent_trust/api/: __init__.py  seed.py  server.py
agent_trust/consent_audit/: __init__.py  chain.py  compliance.py  signer.py
agent_trust/east_west_monitor/: __init__.py  analyzer.py  interceptor.py  store.py
agent_trust/middleware/: __init__.py  a2a_middleware.py
agent_trust/reputation_ledger/: __init__.py  ledger.py  merkle.py  queries.py
agent_trust/scoped_token/: __init__.py  manager.py  policy.py  validator.py
agent_trust/trust_graph/: __init__.py  alerts.py  detector.py  graph.py
agent_trust/utils/: storage.py
dashboard/: package.json
dashboard/src/: App.css  App.jsx  index.css
tests/: __init__.py  test_agent_id.py  test_consent_audit.py  test_east_west_monitor.py  test_reputation_ledger.py  test_scoped_token.py  test_trust_graph.py
